@@ -5,7 +5,7 @@ use Test::More tests => 2;
 use_ok ('npg_qc::autoqc::results::bam_flagstats');
 
 subtest 'test attributes and simple methods' => sub {
-  plan tests => 12;
+  plan tests => 21;
 
   my $r = npg_qc::autoqc::results::bam_flagstats->new(
             position => 5,
@@ -44,8 +44,23 @@ subtest 'test attributes and simple methods' => sub {
  
   $r = npg_qc::autoqc::results::bam_flagstats->
     load('t/data/autoqc/bam_flagstats/26074_1#13.bam_flagstats.json');
-  ok($r->target_mapped_bases(), 'target mapped bases available' ) ;
+  is($r->target_mapped_bases(), 133051906008, 'target mapped bases available' ) ;
+  is(int($r->percent_target_proper_pair_mapped_reads), 90,
+    'percent_target_proper_pair_mapped_reads');
+  is(int($r->target_mean_coverage), 45, 'target_mean_coverage');
+  is($r->percent_target_autosome_proper_pair_mapped_reads, undef,
+    'percent_target_autosome_proper_pair_mapped_reads');
+  is($r->target_autosome_mean_coverage, undef, 'target_autosome_mean_coverage');
 
+  $r = npg_qc::autoqc::results::bam_flagstats->
+    load('t/data/autoqc/bam_flagstats/33681_1#15.bam_flagstats.json');
+  is($r->target_mapped_bases(), 0, 'target mapped bases not available' ) ;
+  is($r->percent_target_proper_pair_mapped_reads, undef,
+    'percent_target_proper_pair_mapped_reads');
+  is($r->target_mean_coverage, 0, 'target_mean_coverage');
+  is($r->percent_target_autosome_proper_pair_mapped_reads, undef,
+    'percent_target_autosome_proper_pair_mapped_reads');
+  is($r->target_autosome_mean_coverage, 0, 'target_autosome_mean_coverage');
 };
 
 1;
