@@ -18,6 +18,8 @@ npg_qc release 68.0.0
  - new interop autoqc check
  - retrieval of interop autoqc check results by SeqQC web app is
    currently supressed
+ - division by zero bug fixed in npg_qc::autoqc::role::bam_flagstats
+   for cases when nothing mappes in target regions 
 
 release 67.5.0
  - npg_qc::illumina::interop::parser - a stand-alone custom parser
